<resources>
    <string name="app_name">Budemi</string>
    <string name="brand">Budemi</string>
    <string name="google_server_client_id" translatable="false">id</string>
    <string name="facebook_app_id">id</string>
    <string name="fb_login_protocol_scheme">id</string>
    <string name="digits" translatable="false">0123456789</string>
    <string name="todo">TODO</string>
    <string name="open">Open</string>
    <string name="onboarding_slide1_title">Start learning now!</string>
    <string name="onboarding_slide1_desc">Are you open to learning? Learn, share and everyone can benefit</string>
    <string name="onboarding_slide2_title">Save Time…</string>
    <string name="onboarding_slide2_desc">Leverage other people\'s knowledge and speed up projects!</string>
    <string name="onboarding_slide3_title">Share your knowledge!</string>
    <string name="onboarding_slide3_desc">Start teaching right now and share your valuable knowledge.</string>
    <string name="start_learning_now">Start learning now</string>
    <string name="sign_in_up_page_desc">Start learning from the best instructors in different topics.</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="skip_login">Skip login</string>
    <string name="welcome_back">Welcome back!✌️</string>
    <string name="forget_password_emoji">Forget Password✌️</string>
    <string name="sign_in_desc">Login to your account and enjoy learning…</string>
    <string name="email_or_phone">Email</string>
    <string name="password">Password</string>
    <string name="terms_and_services">By using our services,  you agree to our Terms &amp; Policies</string>
    <string name="donnot_have_account">Don\'t have an account?</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create account✌</string>
    <string name="sign_up_desc">Join us now and start learning and teaching</string>
    <string name="create_an_account">Create an account</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_in">Sign in</string>
    <string name="have_an_account">Have an account?</string>
    <string name="invalid_username_password">Invalid username or password! Try again…</string>
    <string name="cancel">Cancel</string>
    <string name="account_verification">Account verification✌</string>
    <string name="account_verification_desc">Insert the verification code that sent to you…</string>
    <string name="verify_my_account">Verify my account</string>
    <string name="invalid_verification_code">Invalid verification code! Try again…</string>
    <string name="code_not_received">Havent receive the code?</string>
    <string name="resend_code">Resend code</string>
    <string name="my_classes">My Contents</string>
    <string name="my_classes_small">My Contents</string>
    <string name="home">Home</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="exit_desc">Are you sure you want to exit?</string>
    <string name="ok">OK</string>
    <string name="finalize_your_account">Finalize your account</string>
    <string name="your_name">Your Name</string>
    <string name="referral_code">Referral Code</string>
    <string name="_continue">Continue</string>
    <string name="dashboard">Dashboard</string>
    <string name="classes">Contents</string>
    <string name="support">Support</string>
    <string name="featured_classes">Featured Contents</string>
    <string name="newest_classes">Newest Contents</string>
    <string name="view_all">View All</string>
    <string name="best_rated">Best Rated</string>
    <string name="discounted_classes">Discounted Contents</string>
    <string name="free_classes">Free Contents</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="closed">Closed</string>
    <string name="send">Send</string>
    <string name="message_body">Message Body</string>
    <string name="close">Close</string>
    <string name="reply">Reply</string>
    <string name="easiest_way_to_learn">The easiest way for learning…</string>
    <string name="no_notices">No Noticeboards!</string>
    <string name="start_learning">Let\'s start learning!</string>
    <string name="what_are_u_going_to_find">What are you going to find?</string>
    <string name="newest_bundles">Newest Bundles</string>
    <string name="reward_courses_mark">Reward Contents!</string>
    <string name="by_spending_points">By spending points</string>
    <string name="view">View</string>
    <string name="categories">Categories</string>
    <string name="providers">Providers</string>
    <string name="blog">Blog</string>
    <string name="notices">Notices</string>
    <string name="best_selling">Best Selling</string>
    <string name="forget_password_desc">Don\'t be worried, your password will reset.</string>
    <string name="reset_password">Reset password</string>
    <string name="suggested">Suggested</string>
    <string name="search">Search</string>
    <string name="phone_number">Phone Number</string>
    <string name="loading">Loading…</string>
    <string name="next">Next</string>
    <string name="get_started">Get started</string>
    <string name="skip">Skip</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="logout">Log out</string>
    <string name="logout_desc">Are you sure you want to logout?</string>
    <string name="favorites">Favorites</string>
    <string name="comments">Comments</string>
    <string name="hi">Hi</string>
    <string name="you_have_no_new_events">You have no new events…</string>
    <string name="_no_network">Network Problem…</string>
    <string name="no_network_desc">Please check your internet connection and try again…</string>
    <string name="retry">Retry</string>
    <string name="purchased">Purchased</string>
    <string name="make_sure_passwords_are_the_same">Make sure passwords are the same.</string>
    <string name="please_login_error">Login</string>
    <string name="please_login_error_desc">Please login to view this page information.</string>


    <string name="type_menu">dropDownMenuExample</string>
    <string-array name="type_choice">
        <item>text</item>
        <item>video</item>
        <item>image</item>
        <item>discussion</item>
        <item>meeting</item>
    </string-array>
    <string name="title_activity_jetpack_deneme">jetpackDeneme</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>