<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onboardingRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/onboarding_main_scene">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/onboardingGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/onboardingTopImg"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginRight="-60dp"
        app:layout_constraintBottom_toTopOf="@+id/onboardingGuideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboarding_top"
        tools:ignore="RtlHardcoded" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboardingPageViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/onboardingPageIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        android:id="@+id/onboardingPageIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@color/accent"
        app:dotsSize="10dp"
        app:dotsSpacing="5dp"
        app:dotsStrokeColor="@color/gray81"
        app:dotsStrokeWidth="2dp"
        app:dotsWidthFactor="2.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/onboardingPageNextBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_24"
        android:fontFamily="@font/regular"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/textsize_15d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/rippleColor"
        tools:ignore="SpUsage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/onboardingPageStartBtn"
        android:layout_width="180dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="@dimen/margin_32"
        android:fontFamily="@font/regular"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_15d"
        app:backgroundTint="@color/accent"
        app:cornerRadius="@dimen/btn_corner_radius"
        app:layout_constraintBottom_toTopOf="@id/onboardingPageSkipBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/onboardingPageSkipBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_24"
        android:fontFamily="@font/regular"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="@dimen/textsize_15d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/rippleColor"
        tools:ignore="SpUsage" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/onboardingBottomImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="-110dp"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboardingPageIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/onboarding_wave"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.motion.widget.MotionLayout>